# ENBOT

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose-ci.yaml  docker-compose-ci.yml  docker-compose.yaml  en_text.txt  pyproject.toml  pytest.ini
ai/: Dockerfile  alembic.ini  main.py  pyproject.toml
ai/core/: DTO.py  config.py
ai/core/config/: __init__.py  ai.py  database.py  nats.py  settings.py
ai/core/config/struct_logs/: config.py
ai/core/dto/: ai.py
ai/enru/: __init__.py  sentences.py  translate.py  words.py
ai/infra/db/dao/: ai.py  base.py  holder.py  user.py
ai/infra/db/dao/mappers/: base.py  mappers.py
ai/infra/db/dto/: __init__.py  ai.py  user.py
ai/infra/db/models/: __init__.py  ai.py  base.py  user.py
ai/infra/di/: __init__.py  main_factory.py  utils.py
ai/infra/di/provide/: __init__.py
ai/infra/di/provide/general/: faststream.py  logger.py  nats.py
ai/infra/di/provide/other/: __init__.py
app/: .env.template  main.py
app/bot/: __init__.py  main_factory.py
app/bot/handling/: schema.py
app/bot/handling/dialogs/: __init__.py
app/bot/handling/dialogs/schedules/: dialogs.py  getters.py  handlers.py
app/bot/handling/dialogs/sentence/: dialogs.py  getters.py  handlers.py
app/bot/handling/handlers/: __init__.py  base.py  errors.py  get_user.py  start.py
app/bot/handling/middlewares/: __init__.py  database_repo.py  init_middleware.py  logging.py  translator.py
app/bot/handling/states/: en_text_translate.py
app/bot/handling/views/: commands.py
app/bot/nats_storage/: entry.py
app/bot/utils/: data.py  read_en_file.py
app/core/config/: api.py  bot.py  cache.py  database.py  logging.py  nats.py  redis.py  settings.py
app/core/config/struct_logs/: __init__.py  startup.py
app/core/models/dto/: __init__.py  word.py
app/core/utils/: exceptions.py  input_validation.py  key_checker_lock.py
app/infra/I18N/: factory.py
app/infra/db/: factory.py
app/infra/db/alembic/: env.py
app/infra/db/alembic/versions/: 2026_02_24_1240-9e2acba604b2_add_users.py  2026_03_03_1537-143b0ef77f23_add_words.py  2026_03_04_1832-95763ddadaa1_add_words.py
app/infra/db/dao/: base.py  holder.py  user.py  word.py
app/infra/db/dao/mappers/: mappers.py
app/infra/db/dto/: __init__.py  user.py  word.py
app/infra/db/models/: __init__.py  base.py  user.py  word.py
app/infra/db/repositories/: base.py  users.py
app/infra/db/repositories/mappers/: base.py  mappers.py
app/infra/db/schemas/: users.py
app/infra/db/services/: auth.py  base.py
app/infra/di/: __init__.py  bot.py  db.py  main_factory.py
app/infra/di/provide/general/: __init__.py  db.py  faststream.py  logger.py  nats.py
app/infra/di/provide/other/: __init__.py  bot.py
app/tests/fixtures/: db_provider.py
app/tests/integration/: conftest.py  test_start.py
app/tests/mocks/: bot.py
app/tests/utils/: user.py
nats-mg/: Dockerfile  config.py  migration.py  pyproject.toml
