[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.8.0",
    "dishka-faststream>=0.6.0",
    "faststream[nats]==0.6.6",
    "mistralai>=1.12.3",
    "openai>=2.21.0",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.2",
]
